# ubuntu-touch-pdf-viewer

./: CMakeLists.txt  manifest.json  manifest.json.in
app/: CMakeLists.txt  pdfviewer.desktop.in  ubuntu-touch-pdf-viewer.qml
app/components/: CMakeLists.txt
app/tests/autopilot/: run
app/tests/autopilot/ubuntu-touch-pdf-viewer/main/: test_main.py
app/ui/: CMakeLists.txt  HelloTab.qml
backend/: CMakeLists.txt
backend/modules/PDFViewer/: PDFComponent.cpp  PDFComponent.h  backend.cpp  backend.h  qmldir
backend/modules/Pdfviewer/: PDFComponent.h  backend.cpp  qmldir
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
po/: ubuntu-touch-pdf-viewer.sturmflut.pot
